--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus"
   disqus:
-    shortname            : Yoon # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : yoonblog # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -288,3 +288,10 @@ defaults:
       comments: # true
       share: true
       related: true
+# _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
